--- a/css/pendu.css
+++ b/css/pendu.css
@@ -3,8 +3,7 @@
     display: none;
     width: auto;
     margin: 0 auto;
-    padding-right: 15px;
-    text-align: center;
+    padding: 0px 15px;
 }
 /* Les bouttons */
 .start, .rejouer {
@@ -76,7 +75,7 @@ html {
 
 body {
     margin: 5px 0px;
-    height: 100vh;
+    height: 108vh;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -85,7 +84,7 @@ body {
 }
 
 .top{
-    width: 1463px;
+    width: 1470px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -138,7 +137,7 @@ header h1 {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     text-align: center;
-    white-space: nowrap;
+   
    
 
     background-color: rgba(46, 82, 39, 0.3);
