--- a/css/pendu.css
+++ b/css/pendu.css
@@ -81,6 +81,7 @@ body {
     flex-direction: column;
     align-items: center;
     min-width: 375px;
+    overflow: hidden;
 }
 
 .top{
@@ -91,7 +92,8 @@ body {
     font-family: Amatic SC;
     font-size: 20px;
     font-weight: bold;
-    margin: -24px;
+    margin: -50px;
+    margin-bottom: -114px;
 
     
 }
@@ -129,11 +131,11 @@ header h1 {
 .imageCentrale img {
     border: 3px solid #160f0a;
     width: 100%;
+    margin-bottom: -47px;
 }
 
 /* Le clavier */
 .clavier {
-    padding: 10px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     text-align: center;
@@ -148,9 +150,9 @@ header h1 {
 }
 
 .clavier button {
-    margin: 8px;
+    margin: 3px 8px;
     width: 80px;
-    height: 80px;
+    height: 73px;
 
     background-image: url(../images/toucheBackground.png);
     background-size: cover;
