--- a/css/responsivePendu.css
+++ b/css/responsivePendu.css
@@ -1,6 +1,6 @@
 @media all and (max-width:1496px){
-    .top{
-        width: 99%;
+    .container{
+        width: 100%;
     }
 }
 @media all and (max-width:1043px){
@@ -19,12 +19,6 @@
     }
 }
 @media all and (max-width:810px){
-    .menu{
-        margin-right:0px;
-    }
-    .top{
-        width: 98%;
-    }
     .clavier button {
         
         width: 60px;
@@ -32,9 +26,6 @@
     }
 }
 @media all and (max-width:712px){
-    .top {
-        padding: 6px;
-    }
     header p, header h1{
         font-size: 20px;
     }
@@ -48,10 +39,7 @@
         margin:50% 0;
     }
     .deviner, .menu, .mute, .demute,.seriesText{
-        font-size: 18px;
-    }
-    .deviner{
-        margin-right: 60px;
+        font-size: 15px;
     }
 }
 @media all and (max-width:660px){
@@ -60,30 +48,25 @@
         width: 50px;
         height: 50px;
     }
-    .top{
-        width: 96.5%;
-    }}
+ }
     @media all and (max-width:610px){
         .clavier button{
             font-size: 25px;
             width: 35px;
             height: 45px;
         }
-        .top{
-            width: 96.5%;
-        }    
+        .start, .rejouer {
+            font-size: 20px;
+        }
 }
 @media all and (max-width:460px){
-    header p{
-        margin-left: -40px;
-    }
     .clavier{
         grid-template-columns: repeat(5, 1fr);
     }
     .clavier button{
         font-size: 30px;
-        width: 60px;
-        height: 60px;
+        width: 55px;
+        height: 55px;
     }
     .deviner{
         font-size: 12px;
